tests/NormalTests/paczka1/fuzzy1/31393019.err
Error in line 10: 4mwvbT A34 12,4
Error in line 13: uf3d S787 9,2
Error in line 29: pHGsPYE S277 49,A
